--- a/websocket/views/index.rhtml
+++ b/websocket/views/index.rhtml
@@ -12,7 +12,7 @@
       function debug(str){ $("#debug").append("<p>" +  str); };
       console.log('hello');
       // port number may need to be changed.
-      ws = new WebSocket("ws://localhost:12345/");
+      ws = new WebSocket("ws://localhost:<%= @wsport %>/");
       ws.onmessage = function(evt) { $("#msg").append("<p>"+evt.data+"</p>"); };
       ws.onclose = function() { debug("socket closed"); };
       ws.onopen = function() {
